Release 1.0.4: ship 1.21.5 and 1.20.1 (Fabric/Forge) with CCI editions.
Full feature-parity ports plus Modrinth CCI/iChunUtil pins; NeoForge 26.x remains WIP and is not released.

Co-authored-by: Cursor <cursoragent@cursor.com>